# studio

./: .gitignore  .prettierignore  AGENTS.md  CLAUDE.md  NORTH_STAR.md  README.md  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/workflows/: ci.yml
apps/desktop/: eslint.config.js  index.html  package.json  tailwind.config.ts  vitest.config.ts
apps/desktop/public/fixtures/: andante-c-sharp-minor.musicxml  bach-chorale-bwv1-6.musicxml  bach-chorale-bwv66-6.musicxml
apps/desktop/src/: App.tsx  main.tsx
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: audio.rs  commands.rs  lib.rs  main.rs  persistence.rs  recorder.rs  rubberband.rs
apps/desktop/src/agent/: DiffOverlay.tsx  GenerateScoreDialog.tsx  HarmonyPanel.test.tsx  HarmonyPanel.tsx  MultiAgentPanel.tsx  PracticePanel.tsx  TheoryTutor.tsx
apps/desktop/src/audio/: Engine.ts  Mixer.test.ts  Mixer.ts  Player.ts  Sampler.test.ts  Sampler.ts  WaveformView.tsx  clipPlayback.test.ts  clipPlayback.ts  offlineRender.ts
apps/desktop/src/editor/: AudioImportDialog.tsx  EditorPreferences.ts  EditorSettingsPanel.tsx  EditorState.ts  EditorStatusBar.tsx  KeySuggestionDialog.tsx  NoteEditToolbar.tsx  OrchestrationDialog.tsx  SelectionState.ts  TransposeDialog.tsx  noteGrammar.test.ts  noteGrammar.ts  useEditorKeyboard.ts
apps/desktop/src/export/: ExportDialog.tsx  ProductionExportPanel.tsx  exporters.test.ts  exporters.ts  saveBlob.ts  verovio.d.ts
apps/desktop/src/lib/: ScoreEngine.tsx  api.ts  appInfo.ts  engineLog.ts  fret.test.ts  fret.ts  tauri.ts  useAudioMeter.ts  useAudioRecorder.ts  useKeyboardShortcuts.ts  useMidi.ts  useMidiRecorder.test.ts  useMidiRecorder.ts
apps/desktop/src/notation/: ChordDiagram.test.tsx  ChordDiagram.tsx  ChordDiagramStrip.tsx  EditLayer.tsx  Fretboard.tsx  NoteEditMenu.tsx  ScoreEmptyState.tsx  ScoreView.tsx  TuningControl.tsx  ViewModeToggle.tsx  noteResolve.test.ts  noteResolve.ts  osmdAnnotate.ts  osmdFactory.ts  osmdHitTest.ts  pitchDrag.test.ts  pitchDrag.ts  useViewportMenuPosition.ts
backend/agent/: .env.example  README.md  pyproject.toml
backend/agent/app/: __init__.py  agent_tools.py  config.py  generator.py  guitar_styles.py  main.py  multi_agent.py  score_diff.py
backend/agent/app/llm/: anthropic_client.py
backend/agent/app/routes/: __init__.py  audio.py  chat.py  export.py  generate.py  guitar.py  health.py  multi_agent.py  orchestration.py  practice.py  score.py  score_edit.py  style.py  tab.py  theory.py  transpose.py
backend/agent/app/tools/: __init__.py  chord_diagrams.py  fretboard.py  guitar_engine.py  leadsheet_projection.py  score_edit.py  tab_projection.py  theory.py
backend/agent/evals/: conftest.py  eval_latency.py  eval_theory_correctness.py  eval_tool_accuracy.py
backend/agent/tests/: conftest.py  test_agent_tools.py  test_audio_routes.py  test_chord_diagrams.py  test_edit_corpus.py  test_export_routes.py  test_form_analysis.py  test_generate_routes.py  test_guitar_engine.py  test_health.py  test_multi_agent.py  test_new_tools.py  test_orchestration_routes.py  test_practice_routes.py  test_production_exports.py  test_score_edit.py  test_score_routes.py  test_style_routes.py  test_tab_projection.py  test_theory_routes.py
backend/agent/tests/fixtures/: README.md  cross_staff.musicxml  guitar_hopo_bend.musicxml  guitar_technical.musicxml  multi_voice_backup.musicxml  piano_grand_staff.musicxml  tuplets.musicxml
backend/agent/workers/: basic_pitch_worker.py  gaps_worker.py
docs/: ARCHITECTURE.md  GLOSSARY.md  NAMES.md  PRINCIPLES.md  REFERENCE_COMPOSERS.md  RESEARCH.md  UI_DESIGN.md  parking-lot.md
docs/adr/: 0001-tauri-vs-electron.md  0002-react-vite-typescript-strict.md  0003-tailwind-shadcn.md  0004-osmd-notation.md  0005-audio-engine-phase-0.md  0006-fastapi-music21-uv.md  0007-claude-sonnet-phase-0.md  0008-pnpm-monorepo.md  0009-folder-based-project-format.md  0010-audio-engine-v2-and-rubberband.md  0011-theory-engine-package.md  0012-score-diff-contract.md  0013-exporters-and-pdf-via-verovio.md  0014-theory-tutor-panel.md  0015-osmd-display-music21-edit.md  0016-project-schema-v2.md  0017-tool-honesty-convention.md  0018-guitar-tab-schema-v3.md  0019-alphatab-import-only.md  0020-guitar-technical-notation-model.md  0021-audio-schema-v4.md  0022-native-cpal-recording.md  0024-wavesurfer-display-only.md
docs/phases/: PHASE_0.md  PHASE_1.md  PHASE_2.md  PHASE_3.md  PHASE_3_5.md  PHASE_4.md  PHASE_5.md  PREREQUISITES.md  README.md
docs/reference-daws/: GAP_MATRIX.md  GARAGEBAND.md  GUITAR_PRO.md  PRO_TOOLS.md  README.md  RECONCILIATION.md  REFINE_AND_ERADICATE.md
docs/reference-daws/tracks/: TRACK_A_tablature_guitar.md  TRACK_B_audio_workstation.md  TRACK_C_mixing_routing.md  TRACK_D_instruments_tone.md  TRACK_E_assistive_ai.md
tools/scripts/: seed_fixtures.py
(+31 files in other folders)
