[project]
name = "stockhausen-agent"
version = "0.0.1"
description = "Stockhausen agent backend — FastAPI + music21 + Claude tool-use."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "UNLICENSED" }
authors = [{ name = "Irving Hernandez" }]

dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "anthropic>=0.43",
    "music21>=9.3",
    "python-dotenv>=1.0",
    "httpx>=0.27",
    "stockhausen-theory",
]

[tool.uv.sources]
stockhausen-theory = { path = "../../packages/theory/python", editable = true }

[dependency-groups]
dev = [
    "ruff>=0.8",
    "mypy>=1.13",
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "A", "C4", "RET", "SIM", "TID", "ARG", "PL"]
ignore = ["PLR0913"]

[tool.ruff.lint.per-file-ignores]
# PLR2004 (magic values) is noisy for assertions like `status_code == 200`.
"tests/*" = ["PLR2004"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_configs = true

# music21 and partitura ship without type stubs; vendor an `Any` for them so
# strict mode applies to our own code, not to upstream libraries.
[[tool.mypy.overrides]]
module = ["music21", "music21.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
pythonpath = ["."]
asyncio_mode = "auto"
