[package]
name = "stockhausen-desktop"
version = "0.0.1"
description = "AI-native composition environment for classical music and song-writing."
authors = ["Irving Hernandez"]
edition = "2021"
rust-version = "1.80"

[lib]
name = "stockhausen_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2"
anyhow = "1"

# Audio + MIDI (added incrementally in Phase 0 Week 3)
cpal = "0.15"
midir = "0.10"
ringbuf = "0.4"

[profile.dev]
incremental = true

[profile.release]
codegen-units = 1
lto = true
opt-level = 3
panic = "abort"
strip = true
